[package]
name = "SwapEbr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# default = ["no_std"]
no_std = ["libc"]
ptr_ops = []

[dependencies]
crossbeam-utils = "0.8"
cfg-if = "1"
likely_stable = "0.1"
libc = { version = "0.2", optional = true }

[dev-dependencies]
rand = "0.8"
arc-swap = "1.7"
criterion = "0.5.1"
# swap-arc = "0.1.1"
swap-arc = { git = "https://github.com/terrarier2111/SwapArc" }
aarc = "0.2"

[test-dependencies]
rand = "0.8"

[[bench]]
name = "swap_ebr"
harness = false

[profile.release]
debug = true

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]