[package]
name = "swap_it"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# default = ["no_std"]
no_std = ["libc"]
ptr_ops = []
# Normally this shouldn't be required as most of the time LTO is able to
# optimize the code to be as fast as using assembly directly
# but for dylibs or targets with bad (or missing) LTO this might provide
# performance benefits
asm_thrid = []
# asm_thrid = ["thrid"]

[dependencies]
crossbeam-utils = "0"
cfg-if = "1"
likely_stable = "0"
libc = { version = "0", optional = true }
aligned = "0"

[dev-dependencies]
rand = "0"
arc-swap = "1"
criterion = "0"
# swap-arc = "0.1.1"
swap-arc = { git = "https://github.com/terrarier2111/SwapArc" }
aarc = "0"
# FIXME: for some reason this currently doesn't work properly, make it work!
# thrid = { git = "https://github.com/terrarier2111/thrid", optional = true }

[test-dependencies]
rand = "0"

[[bench]]
name = "swap_ebr"
harness = false

# [profile.release]
# debug = true

# [target.x86_64-unknown-linux-gnu]
# linker = "/usr/bin/clang"
# rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
